--- a/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/base/base.pcss
+++ b/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/base/base.pcss
@@ -1,8 +1,13 @@
- @media screen and (max-width: 1024px) {
- 	.prologue,
- 	.portfolio,
- 	.about,
- 	.contact {
- 		padding: 50px 40px 20px 40px;
- 	}
+ .body{
+     font-family: 'Source Sans Pro', sans-serif;
+     width: 100%;
+     height: 100vh;
+     margin: 0;
 }
+ @media screen and (max-width: 1024px) {
+ .body {
+     font-size: 0.8rem;
+ }
+ }
+
+
