--- a/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/components/main.pcss
+++ b/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/components/main.pcss
@@ -3,6 +3,7 @@
  	height: 100%;
  	margin-left: 300px;
  	position: relative;
+ 	
  }
  .main__icon {
  	font-size: 25px;
@@ -19,6 +20,7 @@
  }
  .main_tog {
  	margin-left: 0px;
+
  }
  .main__form-message::placeholder {
  	font-family: 'Source Sans Pro';
@@ -26,8 +28,11 @@
  @media screen and (max-width: 1024px) {
  .main{
  	margin-left: 155px;
+ 	padding: 0;
+
  }
  .main_tog {
  	margin-left: 0;
+ 	padding: 0;
  }
 }
