--- a/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/components/prologue.pcss
+++ b/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/components/prologue.pcss
@@ -14,10 +14,11 @@
  .prologue__container-f {
  	font-size: 35px;
  	margin-bottom: 20px;
+ 	width: 540px;
  }
  .prologue__container-s {
  	color: #e0e0dd;
  	margin-bottom: 20px;
  }
-
+ 
 
