--- a/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/index.pcss
+++ b/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/index.pcss
@@ -1,13 +1,15 @@
 @import url("base/base.pcss");
 @import url("components/aside.pcss");
-@import url("components/body.pcss");
 @import url("components/contact.pcss");
 @import url("components/form.pcss");
 @import url("components/main.pcss");
 @import url("components/input.pcss");
+@import url("components/navigation.pcss");
 @import url("components/picture.pcss");
 @import url("components/portfolio.pcss");
 @import url("components/prologue.pcss");
 @import url("components/button.pcss");
 @import url("components/about.pcss");
 @import url("components/textarea.pcss");
+@import url("components/aside-footer.pcss");
+@import url("components/portfolio-card.pcss");
