--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/footer.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/footer.pcss
@@ -1,4 +1,4 @@
-.sidebar__footer{
+.footer{
   position: fixed;
   bottom: 0;
   font-size: 20px;
@@ -25,7 +25,7 @@
 }
 
 @media (max-width: 899px){
-.sidebar__footer{
+.footer{
   position: fixed;
   top: 100vw;
   font-size: 20px;
