--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/intro.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/intro.pcss
@@ -8,3 +8,22 @@
   height:760px ;
   color: #fff;
 }
+
+.intro__content{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.content__header{
+  text-align: center;
+  margin: 15px;
+  font-size: 40px;
+}
+
+.content__description{
+  text-align: center;
+  margin: 15px;
+  font-size: 20px;
+}
