--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/contact.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/contact.pcss
@@ -4,3 +4,18 @@
   color: #888;
   box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.15);
 }
+
+.contact__form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 500px){
+.form__inputs{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+}
