--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/inputs.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/inputs.pcss
@@ -8,15 +8,17 @@
   padding: 0.75em 1em 0.75em 1em;
   box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
   border: solid 1px rgba(0, 0, 0, 0.15);
-  margin: 15px 10px 15px 10px;
+  margin: 15px 10px;
   font-size: 17px;
   }
 
 @media (min-width: 500px){
 .inputs__item {
-    width: 26vw;}
+    width: 26vw;
+   }
   }
 @media (max-width: 500px){
 .inputs__item {
-    width: 80vw;}
+    width: 80vw;
+   }
   }
