--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/menu-button.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/menu-button.pcss
@@ -1,4 +1,5 @@
-@media (max-width: 899px){.menu-button{
+@media (max-width: 899px){
+.menu-button{
 color: #fff;
 font-size: 18px;
 line-height: 2.25em;
@@ -12,8 +13,10 @@ display: block;
 width: 3.25em;
 height: 2.25em;
 line-height: 2.25em;
-}}
+ }
+}
 
 @media (min-width: 900px){
-  .fa-bars {display: none;}
+  .fa-bars {display: none;
+  }
 }
