--- a/classworks/yegor-koren/05_javascript/css/index.css
+++ b/classworks/yegor-koren/05_javascript/css/index.css
@@ -14,7 +14,9 @@ main {
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  //height: 100%;
+  min-height: 100%;
+  height: auto;
   justify-content: center;
   width: 100%;
 }
@@ -114,4 +116,19 @@ main > * + * {
 .reverse:hover {
   border-color: rgba(230, 184, 0, 1);
   background-color: rgba(230, 184, 0, 1);
+}
+
+.write {
+  color: #fff;
+  border-color: rgba(102, 0, 153, 0.8);
+  background-color: rgba(102, 0, 153, 0.8);
+}
+.write:hover {
+  border-color: rgba(102, 0, 153, 1);
+  background-color: rgba(102, 0, 153, 1);
+}
+.results {
+  height: 200px;
+  overflow-y: scroll;
+  visibility: hidden;
 }
