--- a/classworks/aliona-mozol/05_js/task/index.css
+++ b/classworks/aliona-mozol/05_js/task/index.css
@@ -24,14 +24,13 @@ main > * + * {
 }
 
 .timer {
-  font-size: 20vw;
+  font-size: 15vw;
   font-weight: 300;
   letter-spacing: -1vw;
 }
 
 .buttons {
   align-items: center;
-  display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -127,4 +126,30 @@ main > * + * {
 .button.stopwatch:hover {
   border-color: #6b9023;
   background: #6b9023;
+}
+
+.button.fix {
+  color: #fff;
+  border-color: #888888;
+  background: #888888;
+}
+
+.button.fix:hover {
+  border-color: #5f5f5f;
+  background: #5f5f5f;
+}
+
+.result-list {
+  width: 200px;
+  height: 200px;
+  margin: 50px;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: inset 0 0.5em 0.5em 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(0, 0, 0, 0.55);
+  font-size: 15px;
+}
+
+.hidden {
+  display: none;
 }
