Fix additional remarks

--- a/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/components/button.pcss
+++ b/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/components/button.pcss
@@ -1,17 +1,19 @@
- .button {
- 	background-color: #7faaa8;
- 	border-radius: 5px;
- 	border-width: 0px;
- 	height: 45px;
- 	width: 170px;
+ .button__container {
+ 	padding: auto 10px auto 10px;
+ 	height: 100%;
+ 	width: 100%
  	color: white;
- 	display: block;
- 	margin: 0 auto;
- 	outline: none;
+ }
+ .button{
+ background-color: #7faaa8;
+ border-radius: 5px;
+ border-width: 0px;
+ display: block;
+ margin: 0 auto;
+ outline: none;
  }
 @media screen and (max-width: 1024px) {
-.button {
- 	width: 120px;
- 	height: 35px;
+.button__container  {
+  padding: auto 5px auto 5px;
  	}
 }
