--- a/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/index.pcss
+++ b/classworks/nicolay-yurkevich/02_html-css-part-2/src/assets/styles/index.pcss
@@ -11,5 +11,7 @@
 @import url("components/button.pcss");
 @import url("components/about.pcss");
 @import url("components/textarea.pcss");
-@import url("components/aside-footer.pcss");
 @import url("components/portfolio-card.pcss");
+@import url("components/socials.pcss");
+@import url("components/social-item.pcss");
+
