--- a/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/contact.pcss
+++ b/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/contact.pcss
@@ -1,4 +1,4 @@
-#contact {
+.contact-content{
   width:100%-300px;
   margin-left: 300px;
   height: 100%;
@@ -11,27 +11,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color:grey;
 }
 
-.contact-text__big-note
-{
+.contact-text__big-note{
   text-align:center;
   max-width: 50%;
   font-size:30px;
   margin-bottom:1%;
 }
 
-.contact-text__small-note
-{
+.contact-text__small-note{
   text-align:center;
   max-width: 70%;
   font-size:15px;
   margin-bottom:1%;
 }
 
-@media screen and (max-width: 1200px)
-{
-  #contact {
+@media screen and (max-width: 1200px){
+  
+  .contact-content{
     text-align: center;
     background-color: #F5F5F5;
     width: 100%;
