--- a/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/form.pcss
+++ b/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/form.pcss
@@ -1,13 +1,4 @@
-.input-form__name-field{
-    width: 30%;
-    height: 40px;
-    margin: 1em;
-    border-radius: 5px 5px 5px 5px;
-    border: 1px solid #DCDCDC;
-    z-index:10;
-}
-
-.input-form__email-field{
+.input-form__field{
   width: 30%;
   height: 40px;
   margin: 1em;
@@ -15,7 +6,7 @@
   border: 1px solid #DCDCDC;
 }
 
-.input-form__message-field{
+.input-form__field--big-size{
   width: 60%;
   height: 300px;
   margin: 1em;
