--- a/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/grid.pcss
+++ b/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/grid.pcss
@@ -13,8 +13,8 @@
   margin-bottom: 10%;
 }
 
-@media screen and (max-width: 1200px)
-{
+@media screen and (max-width: 1200px){
+
   .grid{
     flex-direction: column;
     margin:0;
