--- a/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/portfolio.pcss
+++ b/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/portfolio.pcss
@@ -1,41 +1,32 @@
 .portfolio-content {
   width:100%-300px;
   margin-left: 300px;
-}
-
-#portfolio {
-  text-align: center;
-  margin: 2em;
   color:grey;
 }
-.portfolio-content__text
-{
+
+.portfolio-content__text{
   flex-direction: column;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.portfolio-content__big-note
-{
+
+.portfolio-content__big-note{
   text-align:center;
   font-size:30px;
   margin-bottom:1%;
 }
-.portfolio-content__small-note
-{
+.portfolio-content__small-note{
   text-align:center;
   max-width:80%;
   font-size:15px;
   margin-bottom:1%;
 }
-@media screen and (max-width: 1200px)
-{
+
+@media screen and (max-width: 1200px){
+  
   .portfolio-content {
     width: 100%;
-    margin: 0;
-  }
-  #portfolio {
-    text-align: center;
     margin: 0;
     color:grey;
   }
