--- a/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/intro.pcss
+++ b/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/assets/styles/components/intro.pcss
@@ -26,16 +26,15 @@
   margin-bottom:3%;
 }
 
-.main_text__small-note
-{
+.main_text__small-note{
   max-width:50%;
   text-align: center;
   font-size:15px;
   margin-bottom:3%;
 }
 
-@media screen and (max-width: 1200px)
-{
+@media screen and (max-width: 1200px){
+
   .banner{
     background-image:url("/images/banner.jpg");
     display: flex;
