--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/content/grid.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/content/grid.pcss
@@ -1,24 +1,24 @@
 .grid {
-    padding-top: 20vw;
-    width: 78vw;
-    height: fit-content;
     display: flex;
     flex-direction: column;
+    height: fit-content;
     justify-content: space-between;
+    padding-top: 20vw;
+    width: 78vw;
 }
 
 .grid-row {
-    height: fit-content;
+    align-items: center;
     display: flex;
     flex-direction: row;
+    height: fit-content;
     justify-content: space-between;
-    align-items: center;
 }
 
 .grid-column__element {
-    width: 26vw;
     height: 90%;
-    padding: 2%
+    padding: 2%;
+    width: 26vw;
 }
 
 @media only screen and (max-width: 1500px) {
