--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/content/intro.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/content/intro.pcss
@@ -4,14 +4,14 @@
 }
 
 .intro-text-block {
-    width: 50%;
-    text-align: center;
     color: #bdbdbd;
+    text-align: center;
+    width: 50%;
     &__element {
+        font-size: 1.125rem;
         margin: 0 auto;
+        margin-bottom: 1em; 
         width: 60%;
-        margin-bottom: 1em;
-        font-size: 18px;
         &--large {
             font-size: 2rem;
         }
@@ -20,15 +20,15 @@
 
 @media only screen and (max-width: 1000px) {
     .intro-text-block {
-        width: unset;
         padding-left: 20%;
         padding-right: 20%;
+        width: unset;
         &__element {
-            width: unset;
-            padding-left: 20%;
-            padding-right: 20%;
             margin: 0;
             padding-bottom: 5%;
+            padding-left: 20%;
+            padding-right: 20%;
+            width: unset;
             &--large {
             font-size: 1.9rem;
             }
