--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/content/pretty-text.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/content/pretty-text.pcss
@@ -1,56 +1,56 @@
 .pretty-text-block {
     height: fit-content;
     &__element {
-        margin: 0;
-        width: 92%;
-        padding: 5%;
-        font-size: 24px;
-        text-align: center;
         color: #a7a7a7;
+        font-size: 1.33rem;
         line-height: 2.4rem;
+        margin: 0;
+        padding: 5%;
+        text-align: center;
+        width: 92%;
         &--large {
             color: #757575;
-            text-align: center;
-            font-size: 40px;
-            margin: 0;
+            font-size: 2.5rem;
+            margin: 0;  
             padding-top: 5%;
+            text-align: center;
         }
     }
 }
 
 @media only screen and (max-width: 1500px) {
     .pretty-text-block__element {
-        font-size: 21px;
+        font-size: 1.31rem;
     }
 }
 
 @media only screen and (max-width: 1100px) {
     .pretty-text-block__element {
-        font-size: 20px;
+        font-size: 1.25rem;
     }
 }
 
 @media only screen and (max-width: 1000px) {
     .pretty-text-block__element {
+        font-size: 1.190rem;
         width: fit-content;
-        font-size: 19px;
     }
 }
 
 @media only screen and (max-width: 700px) {
     .pretty-text-block__element {
-        font-size: 18px;
+        font-size: 1.125rem;
     }
 }
 
 @media only screen and (max-width: 650px) {
     .pretty-text-block__element {
-        font-size: 17px;
+        font-size: 1.065rem;
     }
 }
 
 @media only screen and (max-width: 550px) {
     .pretty-text-block__element {
-        font-size: 15px;
+        font-size: 0.935rem;
     }
 }
