--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/content/rounded-button.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/content/rounded-button.pcss
@@ -1,15 +1,15 @@
 .rounded-button {
-    cursor: pointer;
-    opacity: 0.8;
-    text-decoration: none;
-    text-align: center;
-    font-size: 16px;
-    padding: 17px 42px;
+    background-color: #9ad9d4;
+    background-image: linear-gradient(to right, #99d0cb 0%, #6ba39e 100%);
     border: none;
     border-radius: 6px;
     color: #E5FFFF;
-    background-color: #9ad9d4;
-    background-image: linear-gradient(to right, #99d0cb 0%, #6ba39e 100%);
+    cursor: pointer;
+    font-size: 1rem;
+    opacity: 0.8;
+    padding: 17px 42px;
+    text-align: center;
+    text-decoration: none;
     transition-duration: 500ms;
     &:hover {
         opacity: 1;
