--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/scrollbar.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/scrollbar.pcss
@@ -1,6 +1,6 @@
 ::-webkit-scrollbar-button {
-    width: 6px;
     height: 0;
+    width: 6px; 
 }
 
 ::-webkit-scrollbar-track {
@@ -8,17 +8,16 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
     background: #63404c;
     background: linear-gradient(to top, #754f5c 20%, #63404c 44%, #462b35 100%);
-    box-shadow: 0px 1px 1px rgb(51, 51, 51) inset;
-    border: solid 1px rgb(83, 50, 72);
+    border: solid 1px #533248;
+    border-radius: 5px;
+    box-shadow: 0px 1px 1px #333333 inset;
 }
 
 ::-webkit-resizer {
-    width: 7px;
     height: 0;
+    width: 7px; 
 }
 
 ::-webkit-scrollbar {
@@ -26,12 +25,12 @@
 }
 
 textarea::-webkit-scrollbar-track {
-    background-color: rgb(107, 110, 133);
+    background-color: #6B6E85;
 }
 
 textarea::-webkit-scrollbar-thumb {
     background: #63404c;
     background: linear-gradient(to right, #754f5c 20%, #63404c 44%, #462b35 100%);
-    border: solid 1px rgb(150, 104, 134);
+    border: solid 1px #966886;
     box-shadow: none;
 }
