--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/sidebar/menu.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/sidebar/menu.pcss
@@ -1,21 +1,21 @@
-.menu-list {
-    height: fit-content;
+.menu-list { 
     color: #a9a9a9;
+    height: fit-content;
     &__element {
+        align-items: center;
         cursor: pointer;
+        display: flex;
+        font-size: 1.125rem;
         height: 30px;
-        padding-top: 5%;
+        justify-content: space-between;
         padding-bottom: 5%;
         padding-left: 10%;
         padding-right: 10%;
-        transition-duration: 500ms;
-        font-size: 18px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        padding-top: 5%;
+        transition-duration: 500ms; 
         &:hover:not(.menu-list__element--focus) {
-            background: rgb(38, 38, 48);
-            color: rgb(199, 198, 198);
+            color: #C7C6C6;
+            background: #263030;
             transition-duration: 500ms;
         }
     }
@@ -26,33 +26,39 @@
 
 @media only screen and (max-width: 1000px) {
     .menu-list {
+        background-color: #343540;
         display: flex;
         justify-content: space-around;
         margin: 0;
-        background-color: #343540;
         &__element {
-            padding-top: 1%;
+            align-items: center;
+            border-bottom: 2px solid transparent;
+            display: flex;
+            justify-content: center;
             padding-bottom: 1%;
-            width: 25%;
             padding-left: 0%;
             padding-right: 0%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-bottom: 2px solid transparent;
+            padding-top: 1%;
+            width: 25%;
             &:hover:not(.menu-list__element--focus) {
-                background: rgb(45, 45, 56);
+                background: #2D2D38;
             }
             &--focus {
-                background: rgb(31, 31, 39);
+                background: #1F1F27;
                 border-bottom: 2px solid #F87D92;
             }
         }
     }
 }
 
+@media only screen and (max-width: 750px) {
+    .menu-list__element {
+        font-size: 1rem;
+    }
+}
+
 @media only screen and (max-width: 550px) {
     .menu-list__element {
-        font-size: 13px;
+        font-size: 0.85rem;
     }
 }
