--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/inputs.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/inputs.pcss
@@ -5,7 +5,7 @@
   outline: 0;
   background: rgba(255, 255, 255, 0.75);
   border-radius: 0.35em;
-  padding: 0.75em 1em 0.75em 1em;
+  padding: 0.75em 1em;
   box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
   border: solid 1px rgba(0, 0, 0, 0.15);
   margin: 15px 10px;
