--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/intro.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/intro.pcss
@@ -5,7 +5,7 @@
   flex-direction: column;
   background: url(../images/banner.jpg);
   background-size: 100% 100%;
-  height:760px ;
+  padding: 15% 0;
   color: #fff;
 }
 
