--- a/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/contact.pcss
+++ b/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/contact.pcss
@@ -2,8 +2,9 @@
     height: 100vh;
     padding: 20px;
     background-color: #eee;
-    &__caption{
-    margin-left: calc(40% - 16px);
+
+&__caption{
+    text-align: center;
     font-size: 1.3em;
     color: black;
     font-weight: 100;
