--- a/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/base/scaffolding.pcss
+++ b/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/base/scaffolding.pcss
@@ -7,15 +7,19 @@ body{
     font-family: "Source Sans Pro", sans-serif;
 }
 
-.col{
-    padding: 5px;
-    width: calc(100%/3);
-    float: left;
-}
-
 .row{
     height: 100vh;
     margin-left: 20%;
+}
+@media (max-width: 700px){
+    .row.is-active{
+      margin-left: 20%;
+      height: 100vh;
+    }
+    .row{
+      margin-left: 0;
+      height: 100vh;
+    }
 }
 
 .row::after{
