--- a/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/button.pcss
+++ b/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/button.pcss
@@ -1,5 +1,4 @@
 .button{
-    margin-left: calc(40% - 16px);
     background-color: #78a1a0;
     border: none;
     border-radius: 5px;
@@ -7,6 +6,7 @@
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: flex;
+    margin: 0 auto;
     font-size: 16px;
 }
