--- a/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/intro.pcss
+++ b/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/intro.pcss
@@ -2,7 +2,7 @@
     background: url("../images/banner.jpg");
 
 &__text{
-    padding: 10%;
+    padding: 25% 10%;
     text-align: center;
     color: white;
 }
@@ -18,5 +18,19 @@
 &__h1_underline{
     text-decoration: underline;
 }
-}
 
+&__img{
+    display: none;
+}
+}
+@media (max-width: 700px){
+    .intro__img{
+        display: block;
+        width: 50px;
+        padding: 20px;
+        position: fixed;
+    }
+    .intro__img:hover{
+        background-color: rgba(0,0,0,0.3);
+    }
+}
