--- a/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/portfolio.pcss
+++ b/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/components/portfolio.pcss
@@ -2,14 +2,24 @@
     padding: 20px;
     height: auto;
 &__caption{
-    margin-left: calc(40% - 16px);
+    text-align: center;
     font-size: 1.3em;
     color: black;
     font-weight: 100;
+}
+
+&__img{
+    display: none;
 }
 
 &__description{
     margin: 20px;
 }
 }
-
+@media (max-width: 700px){
+    .portfolio__img{
+      display: flex;
+      margin: auto;
+      height: 100px;
+    }
+}
