--- a/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/anna_korosteleva/03_html-css-part-2/task/boilerplate/src/assets/styles/index.pcss
@@ -10,6 +10,6 @@
 
 @import "./components/gallery.pcss";
 
-@import "./components/contacts.pcss";
+@import "./components/contact.pcss";
 
-@import "./components/input.pcss";
+@import "./components/form.pcss";
