[*] Fix bugs after review

--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/content.pcss
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/content.pcss
@@ -6,6 +6,14 @@
   padding: 4em 0;
   box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 
+  &--about-me {
+    background-color: #ecf1f1;
+  }
+
+  &--portfolio {
+    background-color: #f5fafa;
+  }
+
   &__header {
     color: #666;
     font-size: 45px;
@@ -20,6 +28,11 @@
     color: #888;
     line-height: 40px;
     margin: 0;
+  }
+
+  &__img {
+    width: 90%;
+    padding: 5vh 0;
   }
 }
 
