--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/profile.pcss
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/profile.pcss
@@ -10,18 +10,18 @@
     height: 52px;
   }
 
-  &-info {
+  &__info {
     text-align: right;
+  }
 
-    &__name {
-      color: #fff;
-      font-size: 23px;
-      font-weight: bold;
-    }
+  &__info-name {
+    color: #fff;
+    font-size: 23px;
+    font-weight: bold;
+  }
 
-    &__profession {
-      color: #818181;
-      font-size: 15px;
-    }
+  &__info-profession {
+    color: #818181;
+    font-size: 15px;
   }
 }
