--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/intro.pcss
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/intro.pcss
@@ -3,6 +3,13 @@
   background-size: 100% 100%;
   padding: 6em 0;
 
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
+
+
   &__text-wrap {
     display: flex;
     justify-content: center;
@@ -27,6 +34,7 @@
     color: rgb(188, 174, 180);
     line-height: 40px;
     width: 50%;
+    margin: 0;
   }
 
   &__key-word {
