--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/portfolio-cards.pcss
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/portfolio-cards.pcss
@@ -3,15 +3,15 @@
     display: flex;
     flex-direction: column;
   }
+}
 
-  &__item {
-    display: flex;
-    flex-direction: column;
-    margin: 15px;
-    background-color: #fff;
-    text-align: center;
-    box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.15);
-  }
+.portfolio-card {
+  display: flex;
+  flex-direction: column;
+  margin: 15px;
+  background-color: #fff;
+  text-align: center;
+  box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.15);
 
   &__img {
     width: 100%;
