--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/toggle-menu.pcss
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/components/toggle-menu.pcss
@@ -1,3 +1,7 @@
+.toggle-menu__icon {
+  display: none;
+}
+
 @media (max-width: 959px) {
   .toggle-menu {
     color: #fff;
@@ -13,11 +17,9 @@
     width: 3.25em;
     height: 2.25em;
     line-height: 2.25em;
-  }
-}
 
-@media (min-width: 960px) {
-  .toggle-menu__icon {
-    display: none;
+    &__icon {
+      display: inline-block;
+    }
   }
 }
