Fix issues from conversations

--- a/classworks/maxim-shpak/03_git/src/assets/styles/base/base.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/base/base.pcss
@@ -14,11 +14,11 @@ ul {
     padding-left: 0;
 }
 
-.text--light {
+.light {
     color: #ffffff;
 }
 
-.text--underline {
+.underline {
     border-bottom: 1px solid #ffffff;
 }
 
@@ -31,7 +31,7 @@ ul {
 }
 
 img::selection {
-    background: transparent;
+    color: #df75a1;
 }
 
 button::selection {
