--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/content/content.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/content/content.pcss
@@ -12,6 +12,14 @@
         &:first-child {
             justify-content: center;
         }
+        &--intro {
+            background-image: url(../images/banner.jpg);
+            background-size: cover;
+        }
+        &--contact {
+            background-color: #E4EFE9;
+            height: 100vh;
+        }
         &--flow-left {
             margin-left: 25px;
             transition-duration: 300ms;
