--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/content/text-block.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/content/text-block.pcss
@@ -1,9 +1,4 @@
-.intro {
-    background-image: url(../images/banner.jpg);
-    background-size: cover;
-}
-
-.intro-text-block {
+.text-block {
     color: #bdbdbd;
     text-align: center;
     width: 50%;
@@ -19,7 +14,7 @@
 }
 
 @media only screen and (max-width: 1000px) {
-    .intro-text-block {
+    .text-block {
         padding-left: 20%;
         padding-right: 20%;
         width: unset;
@@ -37,7 +32,7 @@
 }
 
 @media only screen and (max-width: 700px) {
-    .intro-text-block {
+    .text-block {
         &__element {
             font-size: 1rem;
             &--large {
@@ -48,7 +43,7 @@
 }
 
 @media only screen and (max-width: 650px) {
-     .intro-text-block {
+     .text-block {
         width: unset;
         padding-left: 10%;
         padding-right: 10%;
@@ -61,7 +56,7 @@
 }
 
 @media only screen and (max-width: 550px) {
-    .intro-text-block {
+    .text-block {
         &__element {
             font-size: 0.9rem;
             &--large {
