--- a/classworks/maxim-shpak/03_git/src/assets/styles/components/sidebar/menu.pcss
+++ b/classworks/maxim-shpak/03_git/src/assets/styles/components/sidebar/menu.pcss
@@ -8,10 +8,7 @@
         font-size: 1.125rem;
         height: 30px;
         justify-content: space-between;
-        padding-bottom: 5%;
-        padding-left: 10%;
-        padding-right: 10%;
-        padding-top: 5%;
+        padding: 5% 10%;
         transition-duration: 500ms; 
         &:hover:not(.menu-list__element--focus) {
             color: #C7C6C6;
