[Task-3] - Fix issues.

--- a/classworks/eugene-shved/03_html_css_part_2/boilerplate/src/assets/styles/components/main.pcss
+++ b/classworks/eugene-shved/03_html_css_part_2/boilerplate/src/assets/styles/components/main.pcss
@@ -1,14 +1,13 @@
 main {
   width: 100%;
 
-  .tooltip {
+  .header__tooltip {
     margin-left: auto;
     padding-left: 20px;
     padding-top: 20px;
   }
 
-  .tooltip_link {
-    color: #fff;
+  .header__tooltip {
   }
 
   .inputs {
@@ -28,10 +27,7 @@ main {
   .submit {
     border: solid #7dafab;
     border-radius: 10px;
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 20px;
     background-color: #7dafab;
     margin-bottom: 20px;
     margin-top: 20px;
@@ -39,7 +35,7 @@ main {
   }
 
   .header {
-    background-image: url("/images/banner.jpg");
+    background-image: url("/portfolio-images/banner.jpg");
   }
 
   .portfolio {
@@ -54,7 +50,7 @@ main {
     .contact {
       padding: 100px;
     }
-    .tooltip {
+    .header__tooltip {
       display: none;
     }
   }
