--- a/classworks/eugene-shved/03_html_css_part_2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/eugene-shved/03_html_css_part_2/boilerplate/src/assets/styles/index.pcss
@@ -5,7 +5,7 @@
 @import "./components/contact.pcss";
 @import "./components/description.pcss";
 @import "./components/greetings.pcss";
-@import "./components/images.pcss";
+@import "./components/portfolio-images.pcss";
 @import "./components/navigation.pcss";
 @import "./components/networks.pcss";
 @import "./components/profile.pcss";
