--- a/classworks/artyom-tsurkan/03_html-css-part-2/src/assets/styles/components/form.pcss
+++ b/classworks/artyom-tsurkan/03_html-css-part-2/src/assets/styles/components/form.pcss
@@ -1,10 +1,9 @@
 .form {
-  &__input-wrapper {
+  &__field-wrapper {
     width: 100%;
   }
 
-  &__input,
-  &__textarea {
+  &__field {
     margin-top: 1.5rem;
     padding: 10px;
     font-size: 3.0rem;
@@ -14,16 +13,16 @@
     background: rgba(255, 255, 255, 0.75);
   }
 
-  &__input {
+  &__field--input {
     width: 48%;
     min-width: 300px;
   }
 
-  &__input:first-child {
+  &__field--input:first-child {
     margin-right: 3.5%;
   }
 
-  &__textarea {
+  &__input--textarea {
     width: 100%;
     resize: none;
   }
