--- a/classworks/artyom-tsurkan/03_html-css-part-2/src/assets/styles/components/page.pcss
+++ b/classworks/artyom-tsurkan/03_html-css-part-2/src/assets/styles/components/page.pcss
@@ -1,6 +1,15 @@
 .page {
   position: relative;
 
+  &__wrapper {
+    padding: 0 20rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
   &__title,
   &__description,
   &__gallery {
