--- a/classworks/artyom-tsurkan/03_html-css-part-2/src/assets/styles/index.pcss
+++ b/classworks/artyom-tsurkan/03_html-css-part-2/src/assets/styles/index.pcss
@@ -3,7 +3,7 @@
 @import "./components/sidebar.pcss";
 @import "./components/profile.pcss";
 @import "./components/nav.pcss";
-@import "./components/soc.pcss";
+@import "./components/socials.pcss";
 
 @import "./components/main.pcss";
 @import "./components/sidebar-toggle.pcss";
