--- a/classworks/polina-rudenko/07_react/my-app/src/components/issues/issues.styles.css
+++ b/classworks/polina-rudenko/07_react/my-app/src/components/issues/issues.styles.css
@@ -25,6 +25,10 @@
   color: rgb(40, 167, 69);
 }
 
+.issues__status--close {
+  color: #f00;
+}
+
 .issues__icon {
   fill: currentColor;
   vertical-align: text-top;
