Fix lint errors

--- a/classworks/pavel-kalugin/07_react-part-1/my-app/src/Components/Issues/Issues.styles.css
+++ b/classworks/pavel-kalugin/07_react-part-1/my-app/src/Components/Issues/Issues.styles.css
@@ -72,6 +72,7 @@
   font-weight: 600;
 }
 
-.issues__link:hover, .issues__link:focus {
+.issues__link:hover,
+.issues__link:focus {
   color: rgb(3, 102, 214);
 }
