Make part-2 main task

--- a/classworks/nikita-solosniuk/07_react-part-1/issues/src/components/Issue/Issue.styles.css
+++ b/classworks/nikita-solosniuk/07_react-part-1/issues/src/components/Issue/Issue.styles.css
@@ -16,13 +16,19 @@
     color: rgb(40, 167, 69);
 }
 
+.issue__status--closed {
+    color: #cb2431;
+}
+
 .issue__status {
-    margin-right: 8px;
+    margin-right: 4px;
+    width: 18px;
 }
 
 .issue__icon {
     fill: currentColor;
     vertical-align: text-top;
+    width: 100%;
 }
 
 .issue__link {
@@ -30,3 +36,4 @@
     font-size: 16px;
     font-weight: 600;
 }
+
