--- a/classworks/nikita-solosniuk/07_react-part-1/issues/src/components/IssuesListingBody/IssuesListingBody.styles.css
+++ b/classworks/nikita-solosniuk/07_react-part-1/issues/src/components/IssuesListingBody/IssuesListingBody.styles.css
@@ -8,6 +8,8 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    max-height: 650px;
+    overflow: auto;
 }
 
 .issues__item:first-of-type {
