Add stylelint and fix lint errors. Add react-router behavior

--- a/classworks/nikita-solosniuk/07_react-part-1/issues/src/App.css
+++ b/classworks/nikita-solosniuk/07_react-part-1/issues/src/App.css
@@ -57,5 +57,11 @@ a {
 
 form {
   display: block;
-  margin-top: 0em;
+  margin-top: 0;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
