--- a/classworks/yegor-koren/07_react-1/src/components/page_head/page_head.style.css
+++ b/classworks/yegor-koren/07_react-1/src/components/page_head/page_head.style.css
@@ -59,6 +59,11 @@
   border-color: #e36209 #e1e4e8 transparent;
 }
 
+.reponav-text {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 .counter {
   display: inline-block;
   padding: 2px 5px;
