[yk_react-1] Complite task

--- a/classworks/yegor-koren/07_react-1/src/components/search_field/search_field.style.css
+++ b/classworks/yegor-koren/07_react-1/src/components/search_field/search_field.style.css
@@ -11,7 +11,7 @@
   font-size: 14px;
   line-height: 20px;
   vertical-align: middle;
-  box-shadow: rgba(27, 31, 35, 0.075) 0px 1px 2px inset;
+  box-shadow: rgba(27, 31, 35, 0.075) 0 1px 2px inset;
   padding: 6px 8px;
   padding-left: 30px;
   background-repeat: no-repeat;
