--- a/classworks/yegor-koren/07_react-1/src/components/header/header.style.css
+++ b/classworks/yegor-koren/07_react-1/src/components/header/header.style.css
@@ -31,7 +31,7 @@ strong {
 .header {
   padding-top: 12px;
   padding-bottom: 12px;
-  color: rgba(255,255,255,0.75);
+  color: rgba(255, 255, 255, 0.75);
   background-color: #24292e;
 }
 
