--- a/classworks/yegor-koren/07_react-1/src/components/issue_items/issue_items.style.css
+++ b/classworks/yegor-koren/07_react-1/src/components/issue_items/issue_items.style.css
@@ -39,6 +39,7 @@
   font-weight: 600;
 }
 
-.issues__link:hover, .issues__link:focus {
+.issues__link:hover,
+.issues__link:focus {
   color: rgb(3, 102, 214);
 }
