--- a/classworks/yegor-koren/07_react-1/src/components/page_head/page_head.style.css
+++ b/classworks/yegor-koren/07_react-1/src/components/page_head/page_head.style.css
@@ -71,6 +71,6 @@
   font-weight: 600;
   line-height: 1;
   color: #444d56;
-  background-color: rgba(27,31,35,0.08);
+  background-color: rgba(27, 31, 35, 0.08);
   border-radius: 20px;
 }
