--- a/classworks/evgeny-marushko/09_redux/src/Components/Issue/Issue.style.css
+++ b/classworks/evgeny-marushko/09_redux/src/Components/Issue/Issue.style.css
@@ -1,5 +1,6 @@
 .issues__item {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   min-height: 55px;
   padding: 8px 16px;
