--- a/classworks/maxim-shpak/09_redux/my-app/src/components/SubNavbar/SubNavbar.css
+++ b/classworks/maxim-shpak/09_redux/my-app/src/components/SubNavbar/SubNavbar.css
@@ -29,6 +29,12 @@
     outline: none;
 }
 
+.subnav__search-input:focus {
+    border-color: #2188ff;
+    outline: none;
+    box-shadow: inset 0 1px 2px rgba(27,31,35,0.075), 0 0 0 0.2em rgba(3,102,214,0.3);
+}
+
 .subnav__search-icon {
     fill: currentcolor;
     position: absolute;
