--- a/classworks/evgeny-marushko/09_redux/src/Components/Issue/Issue.style.css
+++ b/classworks/evgeny-marushko/09_redux/src/Components/Issue/Issue.style.css
@@ -18,3 +18,10 @@
   font-size: 16px;
   font-weight: 600;
 }
+
+.issue {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
