[yk_react-1] Merge 2 issue buttons in 1 ButtonIssue component

--- a/classworks/yegor-koren/07_react-1/src/components/button_issue/button_issue.style.css
+++ b/classworks/yegor-koren/07_react-1/src/components/button_issue/button_issue.style.css
@@ -19,6 +19,10 @@
   color: rgb(40, 167, 69);
 }
 
+.btn-link--closed svg {
+  color: rgb(203, 36, 49);
+}
+
 .btn-link--selected {
   font-weight: 600;
 }
