--- a/classworks/pavel-kalugin/09_redux/my-app/src/Components/Btn/Btn.styles.css
+++ b/classworks/pavel-kalugin/09_redux/my-app/src/Components/Btn/Btn.styles.css
@@ -1,41 +1,30 @@
-.subnav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.subnav__search {
+.btn {
   position: relative;
-}
-
-.subnav__search-input {
-  font-family: inherit;
-  width: 320px;
-  color: rgb(88, 96, 105);
-  background-color: rgb(250, 251, 252);
-  min-height: 34px;
+  display: inline-block;
   font-size: 14px;
+  font-weight: 600;
   line-height: 20px;
+  white-space: nowrap;
   vertical-align: middle;
-  box-shadow: rgba(27, 31, 35, 0.075) 0 1px 2px inset;
-  padding: 6px 8px;
-  padding-left: 30px;
-  background-repeat: no-repeat;
-  background-position: right 8px center;
+  cursor: pointer;
+  user-select: none;
+  background-size: 110% 110%;
+  -webkit-appearance: none;
+  padding: 6px 12px;
+  background-repeat: repeat-x;
+  background-position: -1px -1px;
   border-width: 1px;
   border-style: solid;
-  border-color: rgb(209, 213, 218);
+  border-color: rgba(27, 31, 35, 0.2);
   border-image: initial;
-  border-radius: 3px;
-  outline: none;
+  border-radius: 0.25em;
+  color: rgb(36, 41, 46);
+  background-color: rgb(239, 243, 246);
+  background-image: linear-gradient(-180deg, rgb(250, 251, 252) 0%, rgb(239, 243, 246) 90%);
 }
 
-.subnav__search-icon {
-  fill: currentcolor;
-  position: absolute;
-  top: 9px;
-  left: 8px;
-  display: block;
-  color: rgb(198, 203, 209);
-  text-align: center;
-  pointer-events: none;
+.btn-primary {
+  color: rgb(255, 255, 255);
+  background-color: rgb(40, 167, 69);
+  background-image: linear-gradient(-180deg, rgb(52, 208, 88) 0%, rgb(40, 167, 69) 90%);
 }
