[yk_reqact-2] Fix linter errors

--- a/classworks/yegor-koren/08_react-2/src/components/issues_list/issues_list.style.css
+++ b/classworks/yegor-koren/08_react-2/src/components/issues_list/issues_list.style.css
@@ -15,7 +15,7 @@
 }
 
 .issues-listing__body {
-  border-width: 0 1px 1px 1px;
+  border-width: 0 1px 1px;
   border-style: solid;
   border-color: rgb(225, 228, 232);
 }
