--- a/classworks/yegor-koren/08_react-2/src/components/subnav_description/subnav_description.style.css
+++ b/classworks/yegor-koren/08_react-2/src/components/subnav_description/subnav_description.style.css
@@ -1,19 +1,9 @@
-.container {
-  width: 980px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.issues-listing__subnav {
-  margin-bottom: 20px;
-}
-
 .subnav {
   display: flex;
   justify-content: space-between;
 }
 
-.subnav__description {
+.subnav--description {
   font-size: 26px;
   font-weight: 600;
 }
