--- a/classworks/yegor-koren/08_react-2/src/components/issue/issue.style.css
+++ b/classworks/yegor-koren/08_react-2/src/components/issue/issue.style.css
@@ -1,5 +1,17 @@
-.issues {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.issues__item {
+  display: flex;
+  align-items: center;
+  min-height: 55px;
+  padding: 8px 16px;
+  margin-top: -1px;
+  border-top: 1px solid rgb(225, 228, 232);
+}
+
+.issues__item:first-of-type {
+  border-top-color: transparent;
+}
+
+.issues__title {
+  line-height: 1.25;
+  flex-grow: 1;
 }
