--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
@@ -1,3 +1,4 @@
 @import "./base/scaffolding.pcss";
-
-@import "./components/logo.pcss";
+@import "./components/sidebar.pcss";
+@import "./components/user.pcss";
+@import "./components/item.pcss";
