Add empty sections and section's navigation

--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
@@ -17,9 +17,8 @@ img {
 }
 
 body {
-  background-color: #333;
-  height: 100vh;
+  height: 400vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
 }
