--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
@@ -2,3 +2,4 @@
 @import "./components/sidebar.pcss";
 @import "./components/user.pcss";
 @import "./components/item.pcss";
+@import "./components/section.pcss";
