--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
@@ -3,3 +3,4 @@
 @import "./components/user.pcss";
 @import "./components/item.pcss";
 @import "./components/section.pcss";
+@import "./components/button.pcss";
