Add component Form, add content in third section

--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/components/button.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/components/button.pcss
@@ -3,12 +3,13 @@
   height: 60px;
   background-color: #00cc99;
   border-radius: 5px;
+  border: none;
   color: #fff;
   font-size: 20px;
-  padding-top: 17px;
   text-decoration: none;
   display: flex;
   justify-content: center;
+  align-items: center;
 
   &:hover {
     background-color: #00e6ac;
