--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
@@ -4,3 +4,4 @@
 @import "./components/item.pcss";
 @import "./components/section.pcss";
 @import "./components/button.pcss";
+@import "./components/form.pcss";
