--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
@@ -5,3 +5,4 @@
 @import "./components/section.pcss";
 @import "./components/button.pcss";
 @import "./components/form.pcss";
+@import "./components/figure.pcss";
