--- a/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/yegor-koren/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
@@ -6,3 +6,4 @@
 @import "./components/button.pcss";
 @import "./components/form.pcss";
 @import "./components/figure.pcss";
+@import "./components/action-button.pcss";
